[tool.poetry]
name = "codesherpa"
version = "0.1.0"
description = "CodeSherpa is a code-interpreter ChatGPT plugin. It allows ChatGPT to execute code and run commands within a Docker container."
authors = ["Greg Garcia <greg@garcia.casa>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "localserver", from = "." }
]


[tool.poetry.dependencies]
python = "^3.10, <3.12"
fastapi = "^0.95.1"
uvicorn = "^0.22.0"
pydantic = "^1.10.7"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
pandas = "^2.0.1"
passlib = "^1.7.4"
python-jose = "^3.3.0"
slowapi = "^0.1.8"
loguru = "^0.7.0"
google-auth = "^2.18.0"
httpx = "^0.24.0" 
requests = "^2.30.0"
jinja2 = "^3.1.2"
python-multipart = "^0.0.6"
numpy = "^1.24.3"
scipy = "^1.10.1"
openpyxl = "^3.1.2"
scikit-learn = "^1.2.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
pytest-asyncio = "^0.20.3"
loguru = "^0.7.0"
flake8 = "^4.0.1"
google-auth = "^2.18.0"
requests = "^2.30.0"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.poetry.scripts]
dev = "localserver.main:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"